force-app/main/default/objects/Krow__Krow_User_Configuration__c/Krow__Krow_User_Configuration__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This setting is for set the default view under &apos;My Tasks&apos; tab.</description>
    <label>Klient User Configuration</label>
</CustomObject>