force-app/main/default/objects/Krow__Krow_User_Configuration__c/fields/Krow__Card_View__c.field-meta.xml
<CustomField>
    <fullName>Krow__Card_View__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Card View</label>
    <type>Checkbox</type>
</CustomField>