force-app/main/default/objects/Krow__Krow_User_Configuration__c/fields/Krow__Create_Event_from_Time_Off__c.field-meta.xml
<CustomField>
    <fullName>Krow__Create_Event_from_Time_Off__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Default unchecked, if checked will create an Event from the Time Off Record.</description>
    <label>Create Event from Time-Off</label>
    <type>Checkbox</type>
</CustomField>