force-app/main/default/objects/Krow__Krow_User_Configuration__c/fields/Krow__Create_Task_From_Event__c.field-meta.xml
<CustomField>
    <fullName>Krow__Create_Task_From_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Create klient task from event</description>
    <label>Create Task From Event</label>
    <type>Checkbox</type>
</CustomField>