force-app/main/default/objects/Krow__Krow_User_Configuration__c/fields/Krow__Default_Planners_to_User__c.field-meta.xml
<CustomField>
    <fullName>Krow__Default_Planners_to_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default Planners to User</label>
    <type>Checkbox</type>
</CustomField>