force-app/main/default/objects/Krow__Krow_User_Configuration__c/fields/Krow__Default_to_Task_Schedule_Tab__c.field-meta.xml
<CustomField>
    <fullName>Krow__Default_to_Task_Schedule_Tab__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If checked, will default to SCHEDULE page when opening up task side nav.</description>
    <label>Default to Task Schedule Tab</label>
    <type>Checkbox</type>
</CustomField>