force-app/main/default/objects/Krow__Krow_User_Configuration__c/fields/Krow__Default_to_Task_Time_Tab__c.field-meta.xml
<CustomField>
    <fullName>Krow__Default_to_Task_Time_Tab__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If this setting is on, TIME Tab is Default on opening of Task Side Nav.</description>
    <inlineHelpText>If this setting is on, TIME Tab is Default on opening of Task Side Nav.</inlineHelpText>
    <label>Default to Task Time Tab</label>
    <type>Checkbox</type>
</CustomField>