force-app/main/default/objects/Krow__Krow_User_Configuration__c/fields/Krow__Disable_Cost_Rate_Display__c.field-meta.xml
<CustomField>
    <fullName>Krow__Disable_Cost_Rate_Display__c</fullName>
    <defaultValue>false</defaultValue>
    <description>if checked, ONLY disables Cost Rates on My Project (not Bill Rate).</description>
    <label>Disable Cost Rate Display</label>
    <type>Checkbox</type>
</CustomField>