force-app/main/default/objects/Krow__Krow_User_Configuration__c/fields/Krow__Disable_New_Project_Creation__c.field-meta.xml
<CustomField>
    <fullName>Krow__Disable_New_Project_Creation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable New Project creation on My Project</description>
    <inlineHelpText>Disable New Project creation on My Project</inlineHelpText>
    <label>Disable New Project Creation</label>
    <type>Checkbox</type>
</CustomField>