force-app/main/default/objects/Krow__Krow_User_Configuration__c/fields/Krow__Disable_New_Task_Creation__c.field-meta.xml
<CustomField>
    <fullName>Krow__Disable_New_Task_Creation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable New Task Creation on My Work and Project Detail</description>
    <inlineHelpText>Disable New Task Creation on My Work and Project Detail</inlineHelpText>
    <label>Disable New Task Creation</label>
    <type>Checkbox</type>
</CustomField>