force-app/main/default/objects/Krow__Krow_User_Configuration__c/fields/Krow__Disable_Planner_Availability_View__c.field-meta.xml
<CustomField>
    <fullName>Krow__Disable_Planner_Availability_View__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable Availability View on Resource Planner</description>
    <inlineHelpText>Disable Availability View on Resource Planner</inlineHelpText>
    <label>Disable Planner Availability View</label>
    <type>Checkbox</type>
</CustomField>