force-app/main/default/objects/Krow__Krow_User_Configuration__c/fields/Krow__Disable_Project_Analytics__c.field-meta.xml
<CustomField>
    <fullName>Krow__Disable_Project_Analytics__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To display Project Analytics.</description>
    <label>Disable Project Analytics</label>
    <type>Checkbox</type>
</CustomField>