force-app/main/default/objects/Krow__Krow_User_Configuration__c/fields/Krow__Disable_Project_Edit__c.field-meta.xml
<CustomField>
    <fullName>Krow__Disable_Project_Edit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Project Edit</label>
    <type>Checkbox</type>
</CustomField>