force-app/main/default/objects/Krow__Krow_User_Configuration__c/fields/Krow__Disable_Project_Resource_Edits__c.field-meta.xml
<CustomField>
    <fullName>Krow__Disable_Project_Resource_Edits__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Project Resource Edits</label>
    <type>Checkbox</type>
</CustomField>