force-app/main/default/objects/Krow__Krow_User_Configuration__c/fields/Krow__Disable_Rates_Display__c.field-meta.xml
<CustomField>
    <fullName>Krow__Disable_Rates_Display__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Rates Display</label>
    <type>Checkbox</type>
</CustomField>