force-app/main/default/objects/Krow__Krow_User_Configuration__c/fields/Krow__Disable_Standard_Record_View__c.field-meta.xml
<CustomField>
    <fullName>Krow__Disable_Standard_Record_View__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hide the button on My Project task page to navigate to the Project Standard Record view.</description>
    <inlineHelpText>Hide the button on My Project task page to navigate to the Project Standard Record view</inlineHelpText>
    <label>Disable Standard Record View</label>
    <type>Checkbox</type>
</CustomField>