force-app/main/default/objects/Krow__Krow_User_Configuration__c/fields/Krow__Disable_Sub_Task_Display__c.field-meta.xml
<CustomField>
    <fullName>Krow__Disable_Sub_Task_Display__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, it will hide the sub task tab on task detail panel.</description>
    <label>Disable Sub Task Display</label>
    <type>Checkbox</type>
</CustomField>