force-app/main/default/objects/Krow__Krow_User_Configuration__c/fields/Krow__Disable_Swap_Resource__c.field-meta.xml
<CustomField>
    <fullName>Krow__Disable_Swap_Resource__c</fullName>
    <defaultValue>false</defaultValue>
    <description>if checked, the User would NOT see the Swap Resource tab</description>
    <inlineHelpText>if checked, the User would NOT see the Swap Resource tab</inlineHelpText>
    <label>Disable Swap Resource</label>
    <type>Checkbox</type>
</CustomField>