force-app/main/default/objects/Krow__Krow_User_Configuration__c/fields/Krow__Disable_Task_Detail_Display__c.field-meta.xml
<CustomField>
    <fullName>Krow__Disable_Task_Detail_Display__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this setting is ON, DETAIL tab wouldn&apos;t to available on right side nav panel for task detail.</description>
    <label>Disable Task Detail Display</label>
    <type>Checkbox</type>
</CustomField>