force-app/main/default/objects/Krow__Krow_User_Configuration__c/fields/Krow__Disable_Unassigned_Section_on_Planner__c.field-meta.xml
<CustomField>
    <fullName>Krow__Disable_Unassigned_Section_on_Planner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable Unassigned Work Section on Task Planner</description>
    <inlineHelpText>Disable Unassigned Work Section on Task Planner</inlineHelpText>
    <label>Disable Unassigned Section on Planner</label>
    <type>Checkbox</type>
</CustomField>