force-app/main/default/objects/Krow__Krow_User_Configuration__c/fields/Krow__Display_Assigned_Resources_on_Planners__c.field-meta.xml
<CustomField>
    <fullName>Krow__Display_Assigned_Resources_on_Planners__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Assigned Resources on Planners</label>
    <type>Checkbox</type>
</CustomField>