force-app/main/default/objects/Krow__Krow_User_Configuration__c/fields/Krow__Display_Assigned_Tasks_Only__c.field-meta.xml
<CustomField>
    <fullName>Krow__Display_Assigned_Tasks_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This setting will ONLY display assigned tasks to the user on My Work, My Projects (all views) and Gantt.  - with no ability to Filter and view all.</description>
    <inlineHelpText>This setting will ONLY display assigned tasks to the user on My Work, My Projects (all views) and Gantt.  - with no ability to Filter and view all.</inlineHelpText>
    <label>Display Assigned Tasks Only</label>
    <type>Checkbox</type>
</CustomField>