force-app/main/default/objects/Krow__Krow_User_Configuration__c/fields/Krow__Display_Billable_Tasks_Only_On_Planners__c.field-meta.xml
<CustomField>
    <fullName>Krow__Display_Billable_Tasks_Only_On_Planners__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If Checked, will display only Billable Tasks on the Planners Scheduled View (tasks)</description>
    <inlineHelpText>If Checked, will display only Billable Tasks on the Planners Scheduled View (tasks)</inlineHelpText>
    <label>Display Billable Tasks Only On Planners</label>
    <type>Checkbox</type>
</CustomField>