force-app/main/default/objects/Krow__Krow_User_Configuration__c/fields/Krow__Display_Completed_Tasks_On_Task_Planner__c.field-meta.xml
<CustomField>
    <fullName>Krow__Display_Completed_Tasks_On_Task_Planner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For Control complete task to display on task planner</description>
    <inlineHelpText>For Control complete task to display on task planner</inlineHelpText>
    <label>Display Completed Tasks On Task Planner</label>
    <type>Checkbox</type>
</CustomField>