force-app/main/default/objects/Krow__Krow_User_Configuration__c/fields/Krow__Display_Guest_User_Files_Only__c.field-meta.xml
<CustomField>
    <fullName>Krow__Display_Guest_User_Files_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Restrict what files are seen here to the Guest user.</description>
    <inlineHelpText>Restrict what files are seen here to the Guest user.</inlineHelpText>
    <label>Display Guest User Files Only</label>
    <type>Checkbox</type>
</CustomField>