force-app/main/default/objects/Krow__Krow_User_Configuration__c/fields/Krow__Distribute_Evenly__c.field-meta.xml
<CustomField>
    <fullName>Krow__Distribute_Evenly__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If custom setting is ON then Distribute Evenly will be displayed default checked on new project assignment form on resource planner</description>
    <label>Distribute Evenly</label>
    <type>Checkbox</type>
</CustomField>