force-app/main/default/objects/Krow__Krow_User_Configuration__c/fields/Krow__Enable_Jira_Integration__c.field-meta.xml
<CustomField>
    <fullName>Krow__Enable_Jira_Integration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Jira Integration</label>
    <type>Checkbox</type>
</CustomField>