force-app/main/default/objects/Krow__Krow_User_Configuration__c/fields/Krow__Enable_Read_Only_Mode_Resource_Planner__c.field-meta.xml
<CustomField>
    <fullName>Krow__Enable_Read_Only_Mode_Resource_Planner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, Resource planner is in read only mode.</description>
    <inlineHelpText>If checked, Resource planner is in read only mode.</inlineHelpText>
    <label>Enable Read Only Mode Resource Planner</label>
    <type>Checkbox</type>
</CustomField>