force-app/main/default/objects/Krow__Krow_User_Configuration__c/fields/Krow__Enable_Slack__c.field-meta.xml
<CustomField>
    <fullName>Krow__Enable_Slack__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Slack</label>
    <type>Checkbox</type>
</CustomField>