force-app/main/default/objects/Krow__Krow_User_Configuration__c/fields/Krow__Enable_Task_Status_Updates_Only__c.field-meta.xml
<CustomField>
    <fullName>Krow__Enable_Task_Status_Updates_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>if checked, the Project Task page - will be read-only but the &quot;Status&quot; field will be available for entry.</description>
    <inlineHelpText>if checked, the Project Task page - will be read-only but the &quot;Status&quot; field will be available for entry.</inlineHelpText>
    <label>Enable Task Status Updates Only</label>
    <type>Checkbox</type>
</CustomField>