force-app/main/default/objects/Krow__Krow_User_Configuration__c/fields/Krow__Exclude_non_billable_project_tasks__c.field-meta.xml
<CustomField>
    <fullName>Krow__Exclude_non_billable_project_tasks__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Custom setting is applied to task planner.</description>
    <label>Exclude Non-Billable Tasks from Planner</label>
    <type>Checkbox</type>
</CustomField>