force-app/main/default/objects/Krow__Krow_User_Configuration__c/fields/Krow__Gantt_Chart_View__c.field-meta.xml
<CustomField>
    <fullName>Krow__Gantt_Chart_View__c</fullName>
    <defaultValue>false</defaultValue>
    <description>to control default view on my project tab</description>
    <label>Gantt Chart View</label>
    <type>Checkbox</type>
</CustomField>