force-app/main/default/objects/Krow__Krow_User_Configuration__c/fields/Krow__Gantt_View_Scale__c.field-meta.xml
<CustomField>
    <fullName>Krow__Gantt_View_Scale__c</fullName>
    <label>Gantt View Scale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>