force-app/main/default/objects/Krow__Krow_User_Configuration__c/fields/Krow__Include_PTO_in_Utilization__c.field-meta.xml
<CustomField>
    <fullName>Krow__Include_PTO_in_Utilization__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include PTO in Utilization</label>
    <type>Checkbox</type>
</CustomField>