force-app/main/default/objects/Krow__Krow_User_Configuration__c/fields/Krow__My_Project_View_Default_Filter__c.field-meta.xml
<CustomField>
    <fullName>Krow__My_Project_View_Default_Filter__c</fullName>
    <label>My Project View Default Filter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>