force-app/main/default/objects/Krow__Krow_User_Configuration__c/fields/Krow__Over_all_Gantt_View_Project_Filter__c.field-meta.xml
<CustomField>
    <fullName>Krow__Over_all_Gantt_View_Project_Filter__c</fullName>
    <label>Over-all Gantt View Project Filter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>