force-app/main/default/objects/Krow__Krow_User_Configuration__c/fields/Krow__Planner_Actual_Hours__c.field-meta.xml
<CustomField>
    <fullName>Krow__Planner_Actual_Hours__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Deprecated</inlineHelpText>
    <label>Deprecated</label>
    <type>Checkbox</type>
</CustomField>