force-app/main/default/objects/Krow__Krow_User_Configuration__c/fields/Krow__Planner_Column_Width__c.field-meta.xml
<CustomField>
    <fullName>Krow__Planner_Column_Width__c</fullName>
    <defaultValue>390</defaultValue>
    <description>Planner Resource Column(First Column) width</description>
    <inlineHelpText>Planner Resource Column(First Column) width</inlineHelpText>
    <label>Planner Column Width</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>