force-app/main/default/objects/Krow__Krow_User_Configuration__c/fields/Krow__Planner_Filter_Sub_Type_Skill__c.field-meta.xml
<CustomField>
    <fullName>Krow__Planner_Filter_Sub_Type_Skill__c</fullName>
    <inlineHelpText>Deprecated</inlineHelpText>
    <label>Deprecated</label>
    <length>255</length>
    <type>Text</type>
</CustomField>