force-app/main/default/objects/Krow__Krow_User_Configuration__c/fields/Krow__Planner_No_Filter__c.field-meta.xml
<CustomField>
    <fullName>Krow__Planner_No_Filter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>by no filter search</description>
    <inlineHelpText>Deprecated</inlineHelpText>
    <label>Deprecated</label>
    <type>Checkbox</type>
</CustomField>