force-app/main/default/objects/Krow__Krow_User_Configuration__c/fields/Krow__Planner_Timeline_View__c.field-meta.xml
<CustomField>
    <fullName>Krow__Planner_Timeline_View__c</fullName>
    <defaultValue>&quot;week&quot;</defaultValue>
    <description>day/week/month</description>
    <inlineHelpText>Deprecated</inlineHelpText>
    <label>Deprecated</label>
    <length>255</length>
    <type>Text</type>
</CustomField>