force-app/main/default/objects/Krow__Krow_User_Configuration__c/fields/Krow__Planner_Type__c.field-meta.xml
<CustomField>
    <fullName>Krow__Planner_Type__c</fullName>
    <description>ResourceView/ProjectView</description>
    <inlineHelpText>Deprecated</inlineHelpText>
    <label>Deprecated</label>
    <length>20</length>
    <type>Text</type>
</CustomField>