force-app/main/default/objects/Krow__Krow_User_Configuration__c/fields/Krow__Project_Admin__c.field-meta.xml
<CustomField>
    <fullName>Krow__Project_Admin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Project Admin</label>
    <type>Checkbox</type>
</CustomField>