force-app/main/default/objects/Krow__Krow_User_Configuration__c/fields/Krow__Project_Card_View__c.field-meta.xml
<CustomField>
    <fullName>Krow__Project_Card_View__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Control Default Card view on my project</description>
    <label>Project Card View</label>
    <type>Checkbox</type>
</CustomField>