force-app/main/default/objects/Krow__Krow_User_Configuration__c/fields/Krow__Project_List_View__c.field-meta.xml
<CustomField>
    <fullName>Krow__Project_List_View__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Control  Default List view on my project</description>
    <label>Project List View</label>
    <type>Checkbox</type>
</CustomField>