force-app/main/default/objects/Krow__Krow_User_Configuration__c/fields/Krow__Project_Page_Task_Filter__c.field-meta.xml
<CustomField>
    <fullName>Krow__Project_Page_Task_Filter__c</fullName>
    <label>Project Page Task Filter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>