force-app/main/default/objects/Krow__Krow_User_Configuration__c/fields/Krow__Refresh_Planner_On_Task_Schedule_Change__c.field-meta.xml
<CustomField>
    <fullName>Krow__Refresh_Planner_On_Task_Schedule_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When any changes made from  task scheduling tab then after close task detail refresh planner ui for reflect changes.</description>
    <label>Refresh Planner On Task Schedule Change</label>
    <type>Checkbox</type>
</CustomField>