force-app/main/default/objects/Krow__Krow_User_Configuration__c/fields/Krow__Schedule_Resource__c.field-meta.xml
<CustomField>
    <fullName>Krow__Schedule_Resource__c</fullName>
    <defaultValue>false</defaultValue>
    <description>It controls the project assignment schedule creation from new project creation UI.</description>
    <label>Schedule Resource</label>
    <type>Checkbox</type>
</CustomField>