force-app/main/default/objects/Krow__Krow_User_Configuration__c/fields/Krow__Share_Expense_with_Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>Krow__Share_Expense_with_Project_Manager__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If this is checked, expense created for this resource/user will be shared with project manager.</description>
    <label>Share Expense with Project Manager</label>
    <type>Checkbox</type>
</CustomField>