force-app/main/default/objects/Krow__Krow_User_Configuration__c/fields/Krow__Share_Task_With_Manager__c.field-meta.xml
<CustomField>
    <fullName>Krow__Share_Task_With_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Share Task With Manager</label>
    <type>Checkbox</type>
</CustomField>