force-app/main/default/objects/Krow__Krow_User_Configuration__c/fields/Krow__Share_Time_Off_with_Manager__c.field-meta.xml
<CustomField>
    <fullName>Krow__Share_Time_Off_with_Manager__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If this is checked, time-off record will be shared with user&apos;s manager.</description>
    <label>Share Time-Off with Manager</label>
    <type>Checkbox</type>
</CustomField>