force-app/main/default/objects/Krow__Krow_User_Configuration__c/fields/Krow__Show_Archived_Projects_on_Planner__c.field-meta.xml
<CustomField>
    <fullName>Krow__Show_Archived_Projects_on_Planner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>if checked, it will display Archived Projects on the Resource Planner tab as well for all Projects but NOT Archived Projects where Project Status = &quot;Canceled&quot;.</description>
    <inlineHelpText>if checked, it will display Archived Projects on the Resource Planner tab as well for all Projects but NOT Archived Projects where Project Status = &quot;Canceled&quot;.</inlineHelpText>
    <label>Show Archived Projects on Planner</label>
    <type>Checkbox</type>
</CustomField>