force-app/main/default/objects/Krow__Krow_User_Configuration__c/fields/Krow__Show_Completed_Tasks_On_Resource_Planner__c.field-meta.xml
<CustomField>
    <fullName>Krow__Show_Completed_Tasks_On_Resource_Planner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For Control complete task to display on resource planner</description>
    <inlineHelpText>For Control complete task to display on resource planner</inlineHelpText>
    <label>Show Completed Tasks On Resource Planner</label>
    <type>Checkbox</type>
</CustomField>