force-app/main/default/objects/Krow__Krow_User_Configuration__c/fields/Krow__ToDo_View__c.field-meta.xml
<CustomField>
    <fullName>Krow__ToDo_View__c</fullName>
    <defaultValue>true</defaultValue>
    <label>ToDo View</label>
    <type>Checkbox</type>
</CustomField>