force-app/main/default/objects/Krow__Krow_User_Configuration__c/fields/Krow__Warn_On_Over_Scheduling__c.field-meta.xml
<CustomField>
    <fullName>Krow__Warn_On_Over_Scheduling__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, when the user is scheduling a resource on a task - either from the task schedule page or from the resource planner on a task then warning message is display if overbooked</description>
    <inlineHelpText>If checked, when the user is scheduling a resource on a task - either from the task schedule page or from the resource planner on a task then warning message is display if overbooked</inlineHelpText>
    <label>Warn on Over-Scheduling</label>
    <type>Checkbox</type>
</CustomField>